# dagster-open-platform

./: CLAUDE.md  Makefile  README.md  dagster_cloud.yaml  dagster_cloud_dogfood.yaml  dogfood_master_packages.txt  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
dagster_open_platform/: __init__.py  definitions.py
dagster_open_platform/assets/: aws_cost_reporting.py  cloud_staging.py  cloud_usage.py  dagster_quickstart.py  dbt.py  dlt.py  hightouch_syncs.py  ingest_fivetran.py  monitor_purina_clones.py  oss_analytics.py  postgres_mirror.py  salesforce.py  slack_analytics.py  sling_egress.py  sling_ingest.py  source_segment.py  stitch_ingest.py  stripe_data_sync.py  support_bot.py  thinkific_ingest.py
dagster_open_platform/aws/: assets.py  constants.py  definitions.py  partitions.py  schedules.py  sensors.py  utils.py
dagster_open_platform/checks/: salesforce_checks.py
dagster_open_platform/dbt/: assets.py  definitions.py  partitions.py  resources.py  schedules.py
dagster_open_platform/defs/aws/: assets.py  definitions.py  partitions.py  resources.py  schedules.py  sensors.py  utils.py
dagster_open_platform/defs/buildkite/: assets.py  definitions.py  models.py  partitions.py  prompt.py  resources.py  utils.py
dagster_open_platform/defs/claude/: README.md  __init__.py  assets.py  definitions.py  partitions.py  resources.py  schedules.py  utils.py
dagster_open_platform/defs/common/: resources.py
dagster_open_platform/defs/common_room/: assets.py  definitions.py
dagster_open_platform/defs/compass/: definitions.py
dagster_open_platform/defs/dbt/: assets.py  definitions.py  partitions.py  resources.py  schedules.py
dagster_open_platform/defs/dlt/: assets.py  custom_component.py  definitions.py  loads.py  resource.py
dagster_open_platform/defs/fivetran/: assets.py  checks.py  definitions.py
dagster_open_platform/defs/hightouch/: assets.py  definitions.py  schedules.py
dagster_open_platform/dlt/: assets.py  definitions.py
dagster_open_platform/fivetran/: assets.py  definitions.py
dagster_open_platform/hightouch/: assets.py  definitions.py  schedules.py
dagster_open_platform/lambda_functions/: common_room_ingest.py
dagster_open_platform/lib/: __init__.py  executable_component.py  schedule.py  simple_asset.py  sling.py
dagster_open_platform/partitions/: __init__.py
dagster_open_platform/pypi/: assets.py  definitions.py  schedules.py
dagster_open_platform/quickstart/: definitions.py
dagster_open_platform/resources/: __init__.py  dlt_resource.py  hightouch_resource.py  scoutos_resource.py  sling_resource.py  stitch_resource.py
dagster_open_platform/schedules/: __init__.py
dagster_open_platform/scout/: assets.py  definitions.py  resources.py  schedules.py
dagster_open_platform/segment/: definitions.py
dagster_open_platform/slack/: definitions.py
dagster_open_platform/sling/: assets.py  checks.py  definitions.py  resources.py  schedules.py
dagster_open_platform/sling_custom/: assets.py  definitions.py  resources.py
dagster_open_platform/snowflake/: assets.py  definitions.py  jobs.py  resources.py  schedules.py  sensors.py
dagster_open_platform/statsig/: assets.py  definitions.py  resources.py  schedules.py
dagster_open_platform/stripe/: __init__.py  definitions.py
dagster_open_platform/utils/: components_test.py  dbt.py  dbt_helpers.py  environment_helpers.py  source_code.py
dagster_open_platform_dbt/: .gitignore  .sqlfluffignore  CLAUDE.md  Makefile  dbt_project.yml  dependencies.yml  package-lock.yml  profiles.yml  selectors.yml  workspace.sdf.yml
dagster_open_platform_dbt/checks/: descriptions.sql  field_descriptions.sql
dagster_open_platform_dbt/macros/: backfill.sql  clean_trailing_path_values.sql  clean_utm_term.sql  coalesce_referrer_from_search.sql  email_cleaner.sql  email_validation.sql  generate_business_unit_flags.sql  get_custom_database.sql  get_custom_schema.sql  get_domain_from_website.sql  get_page_attribution_category.sql  hash_string.sql  html_cleaner.sql  is_bot_ip.sql  is_engaged.sql  is_existing_business.sql  is_intent_score_greater_than_zero.sql  is_internal_user.sql  is_personal_email.sql  name_cleaner.sql  parse_domain_from_email.sql  salesforce_opportunity_new_arr.sql  salesforce_org_mapping_manual_logic.sql  sessionize_page_visits.sql  uri_percent_decode.sql
dagster_open_platform_dbt/semantic/: arr_by_month.yaml
dagster_open_platform_tests/: conftest.py  test_assets.py  test_buildkite_ingestion.py  test_claude_assets.py  test_dbt_assets.py  test_defs.py  test_dlt.py  test_dlt_assets.py  test_resource.py  test_stitch_resource.py  test_support_bot.py  utils.py
dagster_open_platform_tests/__snapshots__/: test_defs.ambr
dagster_open_platform_tests/dlt_test_sources/: duckdb_with_transformer.py
dagster_open_platform_tests/test_dlt/: test_dlt_component.py  test_github_helpers.py
dagster_open_platform_tests/test_gong/: test_basic_execution.py
dagster_open_platform_tests/test_snowflake/: test_dagster_plus_dms_tables.py  test_snowflake_component.py
dbt/: .gitignore  .sqlfluffignore  Makefile  dbt_project.yml  dependencies.yml  package-lock.yml  packages.yml  profiles.yml  workspace.sdf.yml
dbt/macros/: get_custom_schema.sql  limit_dates_for_dev.sql  limit_dates_for_insights.sql  query_to_list.sql
dbt/models/education/: courses.sql  (+1 more)
dlt_sources/: local_buildkite.py  local_github.py
dlt_sources/buildkite/: __init__.py
dlt_sources/github/: __init__.py  helpers.py  queries.py
dlt_sources/hubspot/: __init__.py
dlt_sources/thinkific/: __init__.py
docs/: salesforce-credits-and-contracts.md
purina_open/: __init__.py
purina_open/assets/: cloud_staging.py  health_check.py  oss_analytics.py
purina_open/partitions/: __init__.py
purina_open/resources/: __init__.py  dbt_resource.py  stitch_resource.py
purina_open/utils/: dbt.py  environment_helpers.py
purina_open_dbt/: .gitignore  Makefile  dbt_project.yml  profiles.yml
purina_open_dbt/seeds/: _seeds.yml
purina_open_tests/: test_assets.py
scripts/: backfill_partitions.py  list_athena_access.py  snowflake_to_drive.py
(+394 files in other folders)
